# blendr-cli

./: .gitignore  Deployment.md  pyproject.toml
blendr/: cli.py
blendr/ai/data/: data_loader.py
blendr/ai/models/: model.py
blendr/ai/tasks/: fine_tune.py
blendr/ai/training/: trainer.py
blendr/auth/: authenticate.py
blendr/config/: setup.py
blendr/initiate_socket/: initiate.py
blendr/task_manager/: listen.py
